'use strict';

const { Model } = require('sequelize');
module.exports = (sequelize, DataTypes) => {
    class User extends Model {
        static associate(models) {
            // define association here
        }
    }
    User.init(
        {
            id: {
                type: DataTypes.UUID,
                primaryKey: true,
                defaultValue: DataTypes.UUIDV4,
                allowNull: false,
            },
            username: {
                type: DataTypes.STRING,
                allowNull: false,
                unique: true,
            },
            password: { type: DataTypes.STRING, allowNull: false },
            role: { type: DataTypes.STRING, allowNull: false },
            description: {
                type: DataTypes.STRING,
                allowNull: true,
            },
            created_at: { type: DataTypes.DATE, defaultValue: DataTypes.NOW },
        },
        {
            sequelize,
            modelName: 'User',
            tableName: 'users',
            freezeTableName: true,
            timestamps: false,
        }
    );
    return User;
};
